Fix JAXB missing dependency for JDK 11+ build and document in AI_answer.md
Agent-Logs-Url: https://github.com/RayDutchman/CATIA-Copilot-PLM/sessions/7eb614d3-6bd1-4fdb-b3a7-1ef4bfda5c66

Co-authored-by: RayDutchman <89128539+RayDutchman@users.noreply.github.com>